Fixing project report

--- a/Project Report/tex/main.tex
+++ b/Project Report/tex/main.tex
@@ -1,6 +1,5 @@
-% Pallu
 % School of Engineering
-% Machine Learning Assignment
+% INFO6205 Project Report
 % Northeastern University
 % Boston, MA 02115
 
